# refinement

./: .classpath  .project  Atual.csp  Atual.txt  testRef.asta
Astah Models/: Autonomous Chemical Detector.asta  Chemical Detector.asta  SD modelo Lucas.asta  SDteste.asta  SimFW.asta  Solar Panel Vacuum Cleaner.asta  Vacuum Cleaner.asta  modelo_lucas_para_plugin.asta  padroes_DA to CSP.asta  testPlugin.asta
RoboChartModels/.metadata/: version.ini
RoboChartModels/ChemicalDetector/: ChemicalDetector_assertions.html
RoboChartModels/RoboVacuum/: DisplacementSM.rct  InputDuplicationSM.rct  basic.assertions  representations.aird
RobochartModels/: .project  ChemicalDetector.rar  RoboVacuum.rar
RobochartModels/ChemicalDetector/: Detect.rct  MainComputer.rct  System.rct  representations.aird
RobochartModels/RoboVacuum/: .project  AngularSpeedSM.rct  ClearSM.rct  DisplacementSM.rct  InputDuplicationSM.rct  LinearSpeedSM.rct  MidLevelSM.rct  PID.rct  PathPlanningSM.rct  SpeedSM.rct  basic - Copia.assertions  basic_assertions.html  functions.rct  interfaces.rct  operations.rct  representations.aird  robot.rct  types.rct
RobochartModels/SimFW/: .project  SimFW.rct  representations.aird
RobochartModels/SimFW/src-gen/: .gitignore  CMakeLists.txt  main.cpp
RobochartModels/SimFW/src-gen/RoboCalcAPI/: Controller.h  StateMachine.h  Timer.h
RobochartModels/SimFW_notimed/: .project  SimFW.rct  representations.aird
ref/: .classpath  .project  SDteste.asta  SDteste.asta.bak  pom.xml  refTemp.csp  result - Copia.csp  result.csp  resultado.csp  resultado2.csp
(+904 files in other folders)
